Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22742

QDeclarativePixmapStore does not free all pixmaps

XMLWordPrintable

    • b99c9490c398fb4d285d5f28edd553445b76d79f

      QDeclarativePixmapStore does not flush cache when it is deleted. Items still left in the cache are not deleted, causing graphics memory to leak.

        1. memcheck_declarativeview.zip
          8 kB
          Annikka Aalto (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-22742
        # Subject Branch Project Status CR V

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            annaalto Annikka Aalto (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change